--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,10 +1,4 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
+<ion-content padding class="conteudo-pagina">
   <h2>Welcome to Ionic!</h2>
   <p>
     This starter project comes with simple tabs-based layout for apps
