Tela Inicial Com estilo feito

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,9 @@
 <ion-content padding class="conteudo-pagina">
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <div class="circle">
+    <div class="circle-interno">
+        <div class="medicao-info">Ultima medição: <br> <b>09:05 - 14/09/2017</b></div>
+        <div class="valor-medicao">201</div>
+        <div class="unidade-medida">mg/dL</div>
+    </div>
+  </div>
 </ion-content>
