Modal Add Medicao & Bugs em tela inicial

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,5 +5,8 @@
         <div class="valor-medicao">201</div>
         <div class="unidade-medida">mg/dL</div>
     </div>
+    <a (click)="openAddMedicao()">
+        <div class="adicionar-medicao"> + </div>
+    </a>
   </div>
 </ion-content>
